@@ -33,6 +33,7 @@ Version 8.0.0 - DEV
  - Reduce cost of the hash function to handle large amounts of accounts when
    generating or storing passwords.
  - Improve API action to add submission to adhere to the CCS spec.
+ - Add API action to create clarification following CCS spec.
 
 
 Version 7.3.2 - 23 November 2020
